--- a/Inicio2.html
+++ b/Inicio2.html
@@ -66,5 +66,10 @@
         <a id="miBoton" class="transparent" href="index2.html" style="position: absolute; top:83%; left: 44.5%;">Comprar</a>
     </div>
     <script src="assets/js/Inicio.js"></script>
+    <script>
+        document.getElementById('miBoton').addEventListener('click', function() {
+            window.open('index3.html', '_blank');
+        });
+    </script>
 </body>
 </html>
