--- a/Inicio2.html
+++ b/Inicio2.html
@@ -63,7 +63,7 @@
            </div>
           
         </div>
-        <a id="miBoton" class="transparent" href="index2.html" style="position: absolute; top:83%; left: 44.5%;">Comprar</a>
+        <a id="miBoton" class="transparent" href="index2.html" style="position: absolute; top:83%; left: 44.5%;">SIGUIENTE</a>
     </div>
     <script src="assets/js/Inicio.js"></script>
     <script>
