--- a/index3.html
+++ b/index3.html
@@ -35,8 +35,15 @@
                 </a>
             </div>
         </div>
+        <button id="finalButton">Final</button>
     </div>
+    
     <script src="assets/js/script2.js"></script>
     <script src="assets/js/script2.0.js"></script>
+    <script>
+        document.getElementById("finalButton").addEventListener("click", function() {
+            window.location.href = "MenúM.html";
+        });
+    </script>
 </body>
 </html>
