--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <script src="assets/js/Inicio.js"></script>
     <script>
         document.getElementById('miBoton').addEventListener('click', function() {
-            window.open('index3.html', '_blank');
+            window.open('tercer.html', '_blank');
         });
     </script>
 </body>
