--- a/mujer.html
+++ b/mujer.html
@@ -36,7 +36,7 @@
           <div class="item relojes">
             <a href="collares.html">
               <img src="https://i.pinimg.com/564x/c0/67/1a/c0671aa7c91ea55290163f8b21a24f7f.jpg" alt="Relojes">
-              <p>Relojes</p>
+              <p>Apliques de espalda</p>
             </a>
           </div>
           <div class="item ropa">
