--- a/primera.html
+++ b/primera.html
@@ -19,12 +19,12 @@
     <main>
         <div class="contenido">
             <h2>Sobre Nosotr@s</h2>
-            <p>Somos una joyería dedicada a crear piezas únicas y personalizadas con materiales de alta calidad. Explora nuestras colecciones inspiradas en la belleza y la elegancia.</p>
+            <p>Somos una joyería dedicada a crear piezas únicas y personalizadas con materiales de alta calidad.¡Explora nuestras colecciones inspiradas en la belleza y la elegancia!.</p>
         </div>
     </main>
     <button id="mostrarLogin">SIGUIENTE</button>
     <footer>
-        <p>&copy; 2024 Joyería XYZ. Todos los derechos reservados.</p>
+        <p>&copy; 2024 Joyería . EXCELSIOR.</p>
     </footer>
     <script src="/assets/js/htmlI.js"></script>
 </html>
